[gd_scene load_steps=40 format=2]

[ext_resource path="res://WorldMap/LevelTile.tscn" type="PackedScene" id=1]
[ext_resource path="res://Demo/DemoWorldMap.gd" type="Script" id=2]
[ext_resource path="res://Sprites/npc1.png" type="Texture" id=3]
[ext_resource path="res://WorldMap/Scripts/WorldPlayer.gd" type="Script" id=4]
[ext_resource path="res://WorldMap/WorldBase.tscn" type="PackedScene" id=5]
[ext_resource path="res://Demo/DemoWorld.gd" type="Script" id=6]
[ext_resource path="res://Sprites/green_portal_sprite_sheet.png" type="Texture" id=7]
[ext_resource path="res://WorldMap/World2Portal.gd" type="Script" id=8]
[ext_resource path="res://WorldMap/Sprites/Star3.png" type="Texture" id=12]
[ext_resource path="res://WorldMap/Sprites/Star4.png" type="Texture" id=13]
[ext_resource path="res://WorldMap/Sprites/Star2.png" type="Texture" id=14]
[ext_resource path="res://WorldMap/Sprites/Star1.png" type="Texture" id=15]
[ext_resource path="res://WorldMap/World0.gd" type="Script" id=16]
[ext_resource path="res://WorldMap/EmptyTile.tscn" type="PackedScene" id=17]
[ext_resource path="res://WorldMap/Sprites/Bridge.png" type="Texture" id=18]
[ext_resource path="res://WorldMap/Bridge.gd" type="Script" id=19]

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 18 )
region = Rect2( 48, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 18 )
region = Rect2( 96, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 18 )
region = Rect2( 144, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 18 )
region = Rect2( 192, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 18 )
region = Rect2( 240, 0, 48, 64 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 18 )
region = Rect2( 0, 0, 48, 64 )

[sub_resource type="SpriteFrames" id=20]
animations = [ {
"frames": [ SubResource( 27 ) ],
"loop": true,
"name": "Opened",
"speed": 5.0
}, {
"frames": [ SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ) ],
"loop": false,
"name": "Deploy",
"speed": 4.0
} ]

[sub_resource type="Animation" id=28]
resource_name = "Bridge"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Bridge:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/1/type = "method"
tracks/1/path = NodePath("Bridge")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ "Deploy", false ],
"method": "play"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Bridge:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1.9 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("../DemoWorld:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 7 )
region = Rect2( 0, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 7 )
region = Rect2( 64, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 7 )
region = Rect2( 128, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 7 )
region = Rect2( 192, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 7 )
region = Rect2( 256, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 7 )
region = Rect2( 320, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 7 )
region = Rect2( 384, 0, 64, 64 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 7 )
region = Rect2( 448, 0, 64, 64 )

[sub_resource type="SpriteFrames" id=14]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ), SubResource( 12 ), SubResource( 13 ) ],
"loop": true,
"name": "default",
"speed": 16.0
} ]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 144, 26, 36 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 3 )
region = Rect2( 26, 144, 26, 36 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 3 )
region = Rect2( 52, 144, 26, 36 )

[sub_resource type="SpriteFrames" id=5]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="AnimatedTexture" id=15]
frames = 4
frame_0/texture = ExtResource( 15 )
frame_1/texture = ExtResource( 14 )
frame_1/delay_sec = 0.0
frame_2/texture = ExtResource( 12 )
frame_2/delay_sec = 0.0
frame_3/texture = ExtResource( 13 )
frame_3/delay_sec = 0.0

[node name="WorldMap" type="Node2D"]
script = ExtResource( 2 )

[node name="Worlds" type="Node2D" parent="."]

[node name="World0" parent="Worlds" instance=ExtResource( 5 )]
script = ExtResource( 16 )

[node name="TileMap" parent="Worlds/World0" index="0"]
tile_data = PoolIntArray( 1441813, 0, 13, 1441814, 0, 3, 1441815, 0, 4, 1441816, 0, 2, 1441817, 0, 2, 1441818, 0, 12, 1507348, 0, 13, 1507349, 0, 65551, 1507350, 0, 65536, 1507351, 0, 65537, 1507352, 0, 65538, 1507353, 0, 65537, 1507354, 0, 65550, 1507355, 0, 12, 1572884, 0, 6, 1572885, 0, 65536, 1572886, 0, 65539, 1572887, 0, 65538, 1572888, 0, 65539, 1572889, 0, 65536, 1572890, 0, 65536, 1572891, 0, 10, 1638420, 0, 14, 1638421, 0, 65549, 1638422, 0, 65537, 1638423, 0, 65538, 1638424, 0, 65538, 1638425, 0, 65537, 1638426, 0, 65548, 1638427, 0, 15, 1703957, 0, 14, 1703958, 0, 1, 1703959, 0, 0, 1703960, 0, 1, 1703961, 0, 0, 1703962, 0, 15 )

[node name="LevelTile1" parent="Worlds/World0" groups=["Tutorial"] instance=ExtResource( 1 )]
position = Vector2( 384, 384 )

[node name="LevelLabel" parent="Worlds/World0/LevelTile1" index="0"]
visible = false

[node name="Question" type="Label" parent="Worlds/World0/LevelTile1"]
margin_left = -3.0
margin_top = -6.0
margin_right = 37.0
margin_bottom = 8.0
text = "?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tile" parent="Worlds/World0" instance=ExtResource( 17 )]
visible = false
position = Vector2( 384, 320 )

[node name="Tile2" parent="Worlds/World0" instance=ExtResource( 17 )]
visible = false
position = Vector2( 384, 352 )

[node name="Bridge" type="AnimatedSprite" parent="Worlds/World0"]
position = Vector2( 384, 336 )
frames = SubResource( 20 )
animation = "Opened"
playing = true
script = ExtResource( 19 )

[node name="BridgeAnimation" type="AnimationPlayer" parent="Worlds/World0"]
anims/Bridge = SubResource( 28 )

[node name="DemoWorld" parent="Worlds" instance=ExtResource( 5 )]
script = ExtResource( 6 )

[node name="TileMap" parent="Worlds/DemoWorld" index="0"]
tile_data = PoolIntArray( 65539, 0, 13, 65540, 0, 4, 65541, 0, 3, 65542, 0, 5, 65543, 0, 12, 65545, 0, 13, 65546, 0, 4, 65547, 0, 2, 65548, 0, 4, 65549, 0, 12, 65551, 0, 13, 65552, 0, 12, 65555, 0, 13, 65556, 0, 12, 65558, 0, 13, 65559, 0, 4, 65560, 0, 5, 65561, 0, 2, 65562, 0, 12, 65565, 0, 13, 65566, 0, 2, 65567, 0, 5, 65568, 0, 5, 65569, 0, 12, 131075, 0, 8, 131076, 0, 65548, 131077, 0, 0, 131078, 0, 0, 131079, 0, 15, 131081, 0, 7, 131082, 0, 65548, 131083, 0, 1, 131084, 0, 65549, 131085, 0, 10, 131087, 0, 7, 131088, 0, 10, 131091, 0, 7, 131092, 0, 9, 131094, 0, 6, 131095, 0, 65548, 131096, 0, 1, 131097, 0, 1, 131098, 0, 15, 131101, 0, 7, 131102, 0, 65548, 131103, 0, 1, 131104, 0, 65549, 131105, 0, 11, 196611, 0, 6, 196612, 0, 10, 196617, 0, 7, 196618, 0, 9, 196620, 0, 8, 196621, 0, 9, 196623, 0, 6, 196624, 0, 65550, 196625, 0, 12, 196627, 0, 8, 196628, 0, 9, 196630, 0, 8, 196631, 0, 10, 196637, 0, 8, 196638, 0, 9, 196640, 0, 8, 196641, 0, 11, 262147, 0, 8, 262148, 0, 9, 262153, 0, 8, 262154, 0, 10, 262156, 0, 7, 262157, 0, 9, 262159, 0, 7, 262160, 0, 65536, 262161, 0, 65550, 262162, 0, 2, 262163, 0, 65551, 262164, 0, 9, 262166, 0, 8, 262167, 0, 10, 262169, 0, 13, 262170, 0, 2, 262171, 0, 12, 262173, 0, 7, 262174, 0, 65550, 262175, 0, 2, 262176, 0, 65551, 262177, 0, 9, 327683, 0, 8, 327684, 0, 65550, 327685, 0, 2, 327686, 0, 5, 327687, 0, 12, 327689, 0, 8, 327690, 0, 65550, 327691, 0, 3, 327692, 0, 65551, 327693, 0, 10, 327695, 0, 7, 327696, 0, 65548, 327697, 0, 1, 327698, 0, 65549, 327699, 0, 65537, 327700, 0, 11, 327702, 0, 8, 327703, 0, 65550, 327704, 0, 2, 327705, 0, 65551, 327706, 0, 65537, 327707, 0, 11, 327709, 0, 7, 327710, 0, 65548, 327711, 0, 1, 327712, 0, 65549, 327713, 0, 10, 393219, 0, 14, 393220, 0, 1, 393221, 0, 0, 393222, 0, 1, 393223, 0, 15, 393225, 0, 14, 393226, 0, 0, 393227, 0, 0, 393228, 0, 0, 393229, 0, 15, 393231, 0, 14, 393232, 0, 15, 393234, 0, 14, 393235, 0, 0, 393236, 0, 15, 393238, 0, 14, 393239, 0, 0, 393240, 0, 1, 393241, 0, 0, 393242, 0, 1, 393243, 0, 15, 393245, 0, 14, 393246, 0, 15, 393248, 0, 14, 393249, 0, 15, 589846, 0, 13, 589847, 0, 5, 589848, 0, 3, 589849, 0, 12, 655378, 0, 13, 655379, 0, 4, 655380, 0, 3, 655381, 0, 2, 655382, 0, 65551, 655383, 0, 65537, 655384, 0, 65538, 655385, 0, 65550, 655386, 0, 3, 655387, 0, 2, 655388, 0, 12, 720914, 0, 8, 720915, 0, 65537, 720916, 0, 65539, 720917, 0, 65536, 720918, 0, 65537, 720919, 0, 65538, 720920, 0, 65536, 720921, 0, 65539, 720922, 0, 65538, 720923, 0, 65539, 720924, 0, 65550, 720925, 0, 12, 786449, 0, 13, 786450, 0, 65551, 786451, 0, 65538, 786452, 0, 65539, 786453, 0, 65538, 786454, 0, 65537, 786455, 0, 65539, 786456, 0, 65536, 786457, 0, 65537, 786458, 0, 65538, 786459, 0, 65538, 786460, 0, 65539, 786461, 0, 65550, 786462, 0, 12, 851985, 0, 6, 851986, 0, 65537, 851987, 0, 65539, 851988, 0, 65538, 851989, 0, 65538, 851990, 0, 65539, 851991, 0, 65537, 851992, 0, 65536, 851993, 0, 65539, 851994, 0, 65537, 851995, 0, 65538, 851996, 0, 65539, 851997, 0, 65539, 851998, 0, 11, 917521, 0, 8, 917522, 0, 65536, 917523, 0, 65537, 917524, 0, 65539, 917525, 0, 65537, 917526, 0, 65536, 917527, 0, 65537, 917528, 0, 65536, 917529, 0, 65538, 917530, 0, 65537, 917531, 0, 65538, 917532, 0, 65538, 917533, 0, 65538, 917534, 0, 11, 983057, 0, 6, 983058, 0, 65539, 983059, 0, 65536, 983060, 0, 65537, 983061, 0, 65537, 983062, 0, 65538, 983063, 0, 65539, 983064, 0, 65538, 983065, 0, 65539, 983066, 0, 65538, 983067, 0, 65536, 983068, 0, 65539, 983069, 0, 65536, 983070, 0, 9, 1048593, 0, 7, 1048594, 0, 65538, 1048595, 0, 65539, 1048596, 0, 65539, 1048597, 0, 65539, 1048598, 0, 65537, 1048599, 0, 65537, 1048600, 0, 65536, 1048601, 0, 65537, 1048602, 0, 65537, 1048603, 0, 65538, 1048604, 0, 65536, 1048605, 0, 65536, 1048606, 0, 11, 1114129, 0, 14, 1114130, 0, 65549, 1114131, 0, 65536, 1114132, 0, 65539, 1114133, 0, 65537, 1114134, 0, 65538, 1114135, 0, 65539, 1114136, 0, 65536, 1114137, 0, 65538, 1114138, 0, 65536, 1114139, 0, 65539, 1114140, 0, 65537, 1114141, 0, 65548, 1114142, 0, 15, 1179666, 0, 14, 1179667, 0, 1, 1179668, 0, 65549, 1179669, 0, 65537, 1179670, 0, 65539, 1179671, 0, 65538, 1179672, 0, 65537, 1179673, 0, 65536, 1179674, 0, 65539, 1179675, 0, 65548, 1179676, 0, 1, 1179677, 0, 15, 1245204, 0, 14, 1245205, 0, 0, 1245206, 0, 1, 1245207, 0, 0, 1245208, 0, 1, 1245209, 0, 0, 1245210, 0, 1, 1245211, 0, 15 )

[node name="LevelTile1" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 320, 256 )

[node name="LevelTile2" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 352, 256 )
level_num = 2

[node name="LevelTile3" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 384, 256 )
level_num = 3

[node name="LevelTile4" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 384, 288 )
level_num = 4

[node name="LevelTile5" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 416, 256 )
level_num = 5

[node name="LevelTile6" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 448, 256 )
level_num = 6

[node name="LevelTile7" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 320, 224 )
level_num = 7

[node name="LevelTile8" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 352, 224 )
level_num = 8

[node name="LevelTile9" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 384, 224 )
level_num = 9

[node name="LevelTile10" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 416, 224 )
level_num = 10

[node name="LevelTile11" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 448, 224 )
level_num = 11

[node name="LevelTile12" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 320, 192 )
level_num = 12

[node name="LevelTile13" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 352, 192 )
level_num = 13

[node name="LevelTile14" parent="Worlds/DemoWorld" instance=ExtResource( 1 )]
position = Vector2( 384, 192 )
level_num = 14

[node name="World2Portal" type="AnimatedSprite" parent="Worlds/DemoWorld" groups=["Portal", "Tile"]]
position = Vector2( 384, 160 )
frames = SubResource( 14 )
frame = 5
playing = true
offset = Vector2( 0, -8 )
script = ExtResource( 8 )
target_world = 2

[node name="Panel" type="Panel" parent="Worlds/DemoWorld"]
margin_left = 415.0
margin_top = 121.0
margin_right = 623.0
margin_bottom = 161.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Worlds/DemoWorld/Panel"]
margin_left = 8.0
margin_top = 6.0
margin_right = 205.0
margin_bottom = 37.0
text = "Exit here to end the demo
and get your completion times"
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="WorldPlayer" type="AnimatedSprite" parent="."]
z_index = 1
frames = SubResource( 5 )
frame = 3
playing = true
offset = Vector2( 0, -12 )
script = ExtResource( 4 )

[node name="MovementTween" type="Tween" parent="WorldPlayer"]

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ColorRect" type="ColorRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0941176, 0.203922, 0.211765, 1 )
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground"]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 15 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_lock_": true,
"_edit_use_anchors_": false
}

[connection signal="TutorialComplete" from="Worlds/World0" to="." method="_on_World0_TutorialComplete"]
[connection signal="animation_finished" from="Worlds/World0/BridgeAnimation" to="." method="_on_BridgeAnimation_animation_finished"]

[editable path="Worlds/World0"]
[editable path="Worlds/World0/LevelTile1"]
[editable path="Worlds/DemoWorld"]
